Add autostart on boot and status display features
Add upstart-based autostart that waits for Wi-Fi and starts tailscaled
in the configured mode (standard/proxy/tun) on boot, controlled by a
trigger file toggle. Add KUAL status menu item showing daemon state,
connection info, IP, and autostart config. Update menu.json, .gitignore,
and README accordingly.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 tailscale/bin/tailscale
 tailscale/bin/tailscaled
+tailscale/bin/*.txt
+tailscale/bin/*.bak
+tailscale/bin/tailscaled.state
+tailscale/bin/autostart.enabled
