Add script locking, improve robustness and update lifecycle
- Add shared lock.sh helper using mkdir-based atomic locking with
  stale-lock cleanup, sourced by all scripts to prevent concurrent
  operations
- Harden shell scripts: quote variables in arithmetic comparisons,
  use stdin redirection instead of cat pipes (UUOC), quote command
  expansions in upstart conf
- start_tailscale: verify tailscaled is running before attempting
  to connect; exit non-zero on failure
- stop_tailscaled: gracefully disconnect client before killing daemon
  so peers are notified
- update_tailscale: add connectivity pre-check, stop/restart daemon
  across upgrades to prevent version mismatch, add request timeouts
- .gitignore: add auth.key and proxy.address

--- a/tailscale/bin/tailscale-autostart.conf
+++ b/tailscale/bin/tailscale-autostart.conf
@@ -16,8 +16,8 @@ pre-start script
 
     if [ -f "${TRIGGER}" ] && [ -f "${SCRIPT}" ]; then
         [ -x "${SCRIPT}" ] || chmod +x "${SCRIPT}"
-        ${SCRIPT} &
+        "${SCRIPT}" &
     fi
 
-    return 0
+    exit 0
 end script
