--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ tailscale/bin/*.txt
 tailscale/bin/*.bak
 tailscale/bin/tailscaled.state
 tailscale/bin/autostart.enabled
+tailscale/bin/auth.key
+tailscale/bin/proxy.address
